--- a/index.html
+++ b/index.html
@@ -16,61 +16,59 @@
     <link rel="icon" href="./images/favicon.ico" sizes="any">
   </head>
   <body class="page">
-    <header class="header">
-      <div class="decorated-zone">
-        <span class="decor-rec" aria-hidden="true">Rec</span>
-        <nav class="header__theme-menu">
-          <ul class="header__theme-menu-list">
-            <li class="header__theme-menu-item">
-              <button
-                class="header__theme-menu-button header__theme-menu-button_type_light"
-              >
-                День
-              </button>
-            </li>
-            <li class="header__theme-menu-item">
-              <button
-                class="header__theme-menu-button header__theme-menu-button_active header__theme-menu-button_type_auto"
-                disabled
-              >
-                Авто
-              </button>
-            </li>
-            <li class="header__theme-menu-item">
-              <button
-                class="header__theme-menu-button header__theme-menu-button_type_dark"
-              >
-                Неон
-              </button>
-            </li>
-          </ul>
-        </nav>
-        <h1 class="header__logo decorated-logo">
-          no focus
-        </h1>
-        <p class="header__text decor"> Что делать, когда не можешь делать ничего<br>
-          Или почему нам так сложно сконцентрироваться, особенно когда очень надо
-        </p>
-      </div>
+    <header class="header decorated-zone">
+      <span class="decor-rec" aria-hidden="true">Rec</span>
+      <nav class="header__theme-menu">
+        <ul class="header__theme-menu-list">
+          <li class="header__theme-menu-item">
+            <button
+              class="header__theme-menu-button header__theme-menu-button_type_light"
+            >
+              День
+            </button>
+          </li>
+          <li class="header__theme-menu-item">
+            <button
+              class="header__theme-menu-button header__theme-menu-button_active header__theme-menu-button_type_auto"
+              disabled
+            >
+              Авто
+            </button>
+          </li>
+          <li class="header__theme-menu-item">
+            <button
+              class="header__theme-menu-button header__theme-menu-button_type_dark"
+            >
+              Неон
+            </button>
+          </li>
+        </ul>
+      </nav>
+      <h1 class="header__logo decorated-logo">
+        no focus
+      </h1>
+      <p class="header__text decor"> Что делать, когда не можешь делать ничего<br>
+        Или почему нам так сложно сконцентрироваться, особенно когда очень надо
+      </p>
     </header>
     <main class="content">
-      <section class="content__section">
+      <section class="content__section q-why">
         <h2 class="content__section-title">
           Почему сосредоточиться так сложно
         </h2>
         <article class="article">
-            <h3 class="h3 decor">
+            <h3 class="article__title decor">
               Многозадачность
             </h3>
             <p class="article__text">
               <!-- в тексте есть ссылка-->
               Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же легендарная многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? А дело в том, что её просто не существует. Исследователи
-              <a class="link" href="https://www.dana.org/article/multicosts-of-multitasking/">выяснили</a>,
+              <a class="link" href="https://www.dana.org/article/multicosts-of-multitasking/" target="_blank">выяснили</a>,
               что мозгу тяжело концентрироваться даже на двух делах одновременно. А когда в поле внимания попадает несколько важных задач, организм паникует и выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.
             </p>
         </article>
         <article class="article">
-          <h3 class="h3 decor">
+          <h3 class="article__title decor">
             Дофамин
           </h3>
           <p class="article__text">
@@ -78,12 +76,12 @@
           </p>
         </article>
       </section>
-      <section class="content__section">
+      <section class="content__section q-what">
         <h2 class="content__section-title">
           Что снижает концентрацию внимания?
         </h2>
         <article class="article">
-          <h3 class="h3 decor">
+          <h3 class="article__title decor">
               Многозадачность
             </h3>
             <p class="article__text">
@@ -91,7 +89,7 @@
             </p>
         </article>
         <article class="article">
-          <h3 class="h3 decor">
+          <h3 class="article__title decor">
             Еда
           </h3>
           <p class="article__text">
@@ -99,7 +97,7 @@
           </p>
         </article>
         <article class="article">
-          <h3 class="h3 decor">
+          <h3 class="article__title decor">
             Гаджеты
           </h3>
           <p class="article__text">
@@ -107,15 +105,15 @@
           </p>
         </article>
       </section>
-      <section class="content__section">
+      <section class="content__section q-how">
         <h2 class="content__section-title">
           Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)
         </h2>
-        <h3 class="h3 decor">
+        <h3 class="article__title decor">
           5 простых (на самом деле не очень) советов
         </h3>
         <article class="article">
-          <h4 class="h4 decor">
+          <h4 class="article__title-normal decor">
             Представьте небо и облака
           </h4>
           <p class="article__text">
@@ -123,7 +121,7 @@
           </p>
         </article>
         <article class="article">
-          <h4 class="h4 decor">
+          <h4 class="article__title-normal decor">
             Включите музыку
           </h4>
           <p class="article__text">
@@ -131,18 +129,18 @@
           </p>
         </article>
         <article class="article">
-          <h4 class="h4 decor">
+          <h4 class="article__title-normal decor">
             Прогуляйтесь
           </h4>
           <p class="article__text">
             <!-- здесь в тексте есть ссылка-->
             Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
-            <a class="link" href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328">показал</a>,
+            <a class="link" href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328" target="_blank">показал</a>,
             что созерцание природы повышает концентрацию, в то время как после просмотра городских пейзажей она наоборот понижается. Можно совместить прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он будет лучше работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.
           </p>
         </article>
         <article class="article">
-          <h4 class="h4 decor">
+          <h4 class="article__title-normal decor">
             Хорошо ешьте
           </h4>
           <p class="article__text">
@@ -150,7 +148,7 @@
           </p>
         </article>
         <article class="article">
-          <h4 class="h4 decor">
+          <h4 class="article__title-normal decor">
             Читайте
           </h4>
           <p class="article__text">
@@ -158,52 +156,52 @@
           </p>
         </article>
       </section>
-      <section class="content__section">
-        <h3 class="h3 decor">
+      <section class="content__section q-image">
+        <h3 class="article__title decor">
           А можно в картинках?
         </h3>
-        <div class="gallery">
-          <figure class="gallery__item">
+        <ul class="gallery">
+          <li class="gallery__item">
             <img
               src="./images/sunset.png"
               alt="Рассвет"
               class="gallery__image"
               loading="lazy"
             />
-          </figure>
-          <figure class="gallery__item">
+          </li>
+          <li class="gallery__item">
             <img
               src="./images/ice-cream.png"
               alt="Мороженое"
               class="gallery__image"
               loading="lazy"
             />
-          </figure>
-          <figure class="gallery__item">
+          </li>
+          <li class="gallery__item">
             <img
               src="./images/tape.png"
               alt="Кассета"
               class="gallery__image"
               loading="lazy"
             />
-          </figure>
-          <figure class="gallery__item">
+          </li>
+          <li class="gallery__item">
             <img
               src="./images/books.png"
               alt="Книги"
               class="gallery__image"
               loading="lazy"
             />
-          </figure>
-          <figure class="gallery__item">
+          </li>
+          <li class="gallery__item">
             <img
               src="./images/street.png"
               alt="Улица"
               class="gallery__image"
               loading="lazy"
             />
-          </figure>
-        </div>
+          </li>
+        </ul>
       </section>
     </main>
     <footer class="footer decorated-zone">
